# docs/swagger.yaml
@@ -140,6 +140,11 @@ paths:
         name: id
         required: true
         type: string
+      - description: Tenant ID
+        in: header
+        name: X-Tenant-ID
+        required: true
+        type: string
       produces:
       - application/json
       responses:
